--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@discordx/pagination": "^3.4.0",
     "discord.js": "^14.7.1",
     "discordx": "^11.7.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
